fix(gallery): project screenshot overflow

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -64,7 +64,7 @@
     padding-left: 0;
     margin-top: 2.5em;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(325px, 1fr));
     grid-gap: 1em;
 
     .card {
